--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Home - Atmadeep Banerjee</title>
     <meta property="og:type" content="website">
     <meta name="description" content="My personal website">
-    <link rel="icon" type="image/svg+xml" sizes="384x512" href="assets/img/google-scholar.svg">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic&amp;display=swap">
@@ -37,11 +36,11 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <!-- Start: pub -->
-                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#Experience">PUBLICATIONS</a></li><!-- End: pub -->
+                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#publications">PUBLICATIONS</a></li><!-- End: pub -->
                     <!-- Start: exp -->
-                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#education">EXPERIENCE</a></li><!-- End: exp -->
+                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#experience">EXPERIENCE</a></li><!-- End: exp -->
                     <!-- Start: projects -->
-                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">PROJECTS</a></li><!-- End: projects -->
+                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#projects">PROJECTS</a></li><!-- End: projects -->
                     <!-- Start: resume -->
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#resume">RESUME</a></li><!-- End: resume -->
                     <!-- Start: contact -->
@@ -155,7 +154,7 @@
         </div>
     </section><!-- End: pub -->
     <!-- Start: exp -->
-    <section id="resume-1" class="bg-primary text-white mb-0">
+    <section id="experience" class="bg-primary text-white mb-0">
         <div class="container" style="margin-top:2em; margin-bottom:2em; padding:20px;">
             <h2 class="text-uppercase text-center text-white">Experience</h2>
             <p class="text-center" style="margin-top: 1em;">Things I have formally worked on and positions I have held<br></p>
@@ -325,7 +324,7 @@
         </div>
     </section><!-- End: exp -->
     <!-- Start: projects -->
-    <section id="portfolio" class="portfolio" style="background: #969f9a;">
+    <section id="projects" class="portfolio" style="background: #969f9a;">
         <div class="container">
             <h2 class="text-uppercase text-center text-secondary">projects</h2>
             <p class="text-center" style="margin-top: 1em;">Things I have independently worked on</p>
