Added blog links

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <h2 id="Welcome" style="margin-bottom: 0px;">Welcome !</h2>
             <hr class="star-light" style="margin-top: 60px;margin-bottom: 60px;">
             <h2 class="font-weight-light mb-0">I am Atmadeep Banerjee, and you have made it onto my personal website. Please take a look around.</h2>
-            <p class="text-justify" style="margin-top: 15px;font-size: 1.1em;"><strong>About me: </strong>I am an AI Researcher and Engineer<strong>.&nbsp;</strong>I hold a B.E. degree in Computer Science with a minor in Data Science, from Birla Institute of Technology and Science, Pilani. I am interested in algorithms that help computers understand and aid humans better. My current research interests include <strong>Computer Vision for Medical Imagery </strong>and&nbsp;<strong>Generative AI.</strong><br></p>
+            <p class="text-justify" style="margin-top: 15px;font-size: 1.1em;"><strong>About me: </strong>I am an AI Researcher and Engineer<strong>.&nbsp;</strong>I hold a B.E. degree in Computer Science with a minor in Data Science, from Birla Institute of Technology and Science, Pilani. I am interested in algorithms that help computers understand and aid humans better. My current research interests include <strong>Computer Vision for Medical Imagery </strong>and&nbsp;<strong>Generative AI.</strong><br><br>You can checkout my blog <a href="https://atom-101.github.io/blog">here</a></p>
         </div>
     </header><!-- Start: pub -->
     <section id="publications" style="background: #969f9a;">
@@ -146,7 +146,7 @@
                     <div class="card" style="border: none; important">
                         <div class="card-body light-card">
                             <h4 class="card-title">Combinets v2: Improving Conceptual Expansion using SGD</h4>
-                            <p class="card-text">Atmadeep Banerjee<br><em>8th ACM IKDD CODS and 26th COMAD</em><br><a href="https://dl.acm.org/doi/10.1145/3430984.3431054"><span style="color: rgb(34, 37, 41);">[paper]</span></a><br></p>
+                            <p class="card-text">Atmadeep Banerjee<br><em>CODS COMAD 2021:</em>&nbsp;<em>8th ACM IKDD CODS and 26th COMAD</em><br><a href="https://dl.acm.org/doi/10.1145/3430984.3431054"><span style="color: rgb(34, 37, 41);">[paper]</span></a><br></p>
                         </div>
                     </div>
                 </div>
@@ -362,27 +362,6 @@
                         </div>
                     </div>
                 </div><!-- End: QLearning -->
-                <!-- Start: MetaAI -->
-                <div class="row border rounded" style="margin-top:2em; margin-bottom:2em; padding:20px;">
-                    <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4" style="padding:0px;"><img src="assets/img/m.png" style="display: block;margin-left: auto;margin-right: auto;margin-top: 30px;display: none;" height="300px">
-                        <p class="text-center" style="font-family: Bevan, cursive;font-size: 75px;margin-top: 100px;"><strong>MetaAI</strong></p>
-                    </div>
-                    <div class="w-100 d-sm-block d-md-none d-lg-none d-xl-none"></div>
-                    <div class="col-xl-8" style="padding:0px;">
-                        <div class="card" style="border: none; important">
-                            <div class="card-body light-card">
-                                <h4 class="card-title">MetaAI</h4>
-                                <p class="card-text">This is a deep learning library specialised for meta-learning. It is built on top of fastai v1 and Pytorch.&nbsp;</p>
-                                <ul>
-                                    <li>Supports MAML, Meta-SGD and Reptile algorithms.</li>
-                                    <li>Native support for all torchvision resnet models. Also allows use of pretrained imagenet weights.</li>
-                                    <li>Provides functional versions of nn.Conv2d, nn.Batchnorm2d, nn.Linear and nn.Sequential to allow users to easily create their own models for few shot learning.</li>
-                                    <li>Supports fastai’s callback system.</li>
-                                </ul><a class="btn btn-primary btn-lg mx-auto rounded-pill portfolio-modal-dismiss" role="button" href="https://github.com/Atom-101/MetaAI">&nbsp;<i class="fa fa-github"></i>&nbsp;Link</a>
-                            </div>
-                        </div>
-                    </div>
-                </div><!-- End: MetaAI -->
                 <!-- Start: DR -->
                 <div class="row border rounded" style="margin-top:2em; margin-bottom:2em; padding:20px;">
                     <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4" style="padding:0px;"><img src="assets/img/diab_retino-removebg-preview.png" style="display: block;margin-left: auto;margin-right: auto;margin-top: 30px;" height="200px"></div>
@@ -417,6 +396,27 @@
                 <hr style="height: 2px;border: none;color: rgb(33,37,41);background: rgb(33,37,41);margin-bottom: 30px;margin-top: -10px;">
                 <div style="margin-top: 20px;"><a class="btn btn-dark" data-toggle="collapse" aria-expanded="false" aria-controls="collapse-1" href="#collapse-1" role="button" id="hori-center-1">▼</a>
                     <div class="collapse" id="collapse-1">
+                        <!-- Start: MetaAI -->
+                        <div class="row border rounded" style="margin-top:2em; margin-bottom:2em; padding:20px;">
+                            <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4" style="padding:0px;"><img src="assets/img/m.png" style="display: block;margin-left: auto;margin-right: auto;margin-top: 30px;display: none;" height="300px">
+                                <p class="text-center" style="font-family: Bevan, cursive;font-size: 75px;margin-top: 100px;"><strong>MetaAI</strong></p>
+                            </div>
+                            <div class="w-100 d-sm-block d-md-none d-lg-none d-xl-none"></div>
+                            <div class="col-xl-8" style="padding:0px;">
+                                <div class="card" style="border: none; important">
+                                    <div class="card-body light-card">
+                                        <h4 class="card-title">MetaAI</h4>
+                                        <p class="card-text">This is a deep learning library specialised for meta-learning. It is built on top of fastai v1 and Pytorch.&nbsp;</p>
+                                        <ul>
+                                            <li>Supports MAML, Meta-SGD and Reptile algorithms.</li>
+                                            <li>Native support for all torchvision resnet models. Also allows use of pretrained imagenet weights.</li>
+                                            <li>Provides functional versions of nn.Conv2d, nn.Batchnorm2d, nn.Linear and nn.Sequential to allow users to easily create their own models for few shot learning.</li>
+                                            <li>Supports fastai’s callback system.</li>
+                                        </ul><a class="btn btn-primary btn-lg mx-auto rounded-pill portfolio-modal-dismiss" role="button" href="https://github.com/Atom-101/MetaAI">&nbsp;<i class="fa fa-github"></i>&nbsp;Link</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div><!-- End: MetaAI -->
                         <!-- Start: NumpyML -->
                         <div class="row border rounded" style="margin-top:2em; margin-bottom:2em; padding:20px;">
                             <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4" style="padding:0px;"><img src="assets/img/numpy-removebg-preview.png" style="display: block; margin-left: auto;  margin-right: auto;"></div>
@@ -583,6 +583,10 @@
                         <li class="list-inline-item"><a class="btn btn-outline-light btn-social text-center rounded-circle" role="button" href="http://www.linkedin.com/in/atmadeep-banerjee-a12539149"><i class="fa fa-linkedin fa-fw"></i></a></li>
                         <li class="list-inline-item"><a class="btn btn-outline-light btn-social text-center rounded-circle" role="button" href="https://www.kaggle.com/atmadeepb"><i class="fab fa-kaggle fa-fw"></i></a></li>
                         <li class="list-inline-item"><a class="btn btn-outline-light btn-social text-center rounded-circle" role="button" href="https://scholar.google.com/citations?user=lMSaCAkAAAAJ&amp;hl=en"><i class="icon ion-social-google"></i></a></li>
+                        <li class="list-inline-item"><a class="btn btn-outline-light btn-social text-center rounded-circle" role="button" href="https://atom-101.github.io/blog"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="1em" height="1em" fill="currentColor">
+                                    <!--! Font Awesome Free 6.1.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2022 Fonticons, Inc. -->
+                                    <path d="M217.6 96.1c-12.95-.625-24.66 9.156-25.52 22.37C191.2 131.7 201.2 143.1 214.4 143.1c79.53 5.188 148.4 74.09 153.6 153.6c.8281 12.69 11.39 22.43 23.94 22.43c.5156 0 1.047-.0313 1.578-.0625c13.22-.8438 23.25-12.28 22.39-25.5C409.3 191.8 320.3 102.8 217.6 96.1zM224 0C206.3 0 192 14.31 192 32s14.33 32 32 32c123.5 0 224 100.5 224 224c0 17.69 14.33 32 32 32s32-14.31 32-32C512 129.2 382.8 0 224 0zM172.3 226.8C157.7 223.9 144 235.8 144 250.6v50.37c0 10.25 7.127 18.37 16.75 21.1c18.13 6.75 31.26 24.38 31.26 44.1c0 26.5-21.5 47.1-48.01 47.1c-26.5 0-48.01-21.5-48.01-47.1V120c0-13.25-10.75-23.1-24.01-23.1l-48.01 .0076C10.75 96.02 0 106.8 0 120v247.1c0 89.5 82.14 160.2 175 140.7c54.38-11.5 98.27-55.5 109.8-109.7C302.2 316.1 247.8 241.8 172.3 226.8z"></path>
+                                </svg></a></li>
                     </ul>
                 </div>
             </div>
