Fix resume iframe (again)

--- a/index.html
+++ b/index.html
@@ -15,18 +15,16 @@
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
     <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css">
-    <link rel="stylesheet" href="assets/css/aos.min.css">
-    <link rel="stylesheet" href="assets/css/untitled.css">
-    <link rel="stylesheet" href="assets/css/untitled-1.css">
-    <link rel="stylesheet" href="assets/css/Glass-Panel.css">
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-148432596-1"></script>
+    <link rel="stylesheet" href="assets/css/styles.min.css">
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-EFW0XGGWPN"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-148432596-1');
+  gtag('config', 'G-EFW0XGGWPN');
 </script>
 </head>
 
@@ -54,7 +52,7 @@
             <h2 id="Welcome" style="margin-bottom: 0px;">Welcome !</h2>
             <hr class="star-light" style="margin-top: 60px;margin-bottom: 60px;">
             <h2 class="font-weight-light mb-0">I am Atmadeep Banerjee, and you have made it onto my personal website. Please take a look around.</h2>
-            <p class="text-justify" style="margin-top: 15px;font-size: 1.1em;"><strong>About me: </strong>I am an AI Researcher and Engineer<strong>.&nbsp;</strong>I hold a B.E. degree in Computer Science with a minor in Data Science, from Birla Institute of Technology and Science, Pilani. I am interested in algorithms that help computers understand and aid humans better. My current research interests include <strong>Computer Vision for Medical Imagery </strong>and&nbsp;<strong>Generative AI.</strong><br><br>You can checkout my blog <a href="https://atom-101.github.io/blog">here</a></p>
+            <p class="text-justify" style="margin-top: 15px;font-size: 1.1em;"><strong>About me:&nbsp;</strong>I am a deep learning researcher, primarily interested in computer vision. My current research interests include generative AI and applications of deep learning in bio-medicine.<br><br>Over the years, I have leveraged AI to solve a broad set of problems spanning multiple domains like vision, natural language and speech. On the engineering side of things, I have worked at multiple startups to build their AI products and data pipelines.<br><br>I occasionally participate in Kaggle competitions and am currently ranked a Competitions Expert. I also (try to) maintain a blog where I share my insights on various AI-related topics. You can check it out&nbsp;<a href="https://atom-101.github.io/blog">here</a>.</p>
         </div>
     </header><!-- Start: pub -->
     <section id="publications" style="background: #969f9a;">
@@ -171,7 +169,7 @@
                         <div class="card-body dark-card">
                             <h4 class="card-title" style="color: #fff;">Morphle Labs | ML Engineer</h4>
                             <h6 class="text-muted card-subtitle mb-2">Sep, 2021 - Oct, 2022</h6>
-                            <p class="card-text" style="color: #fff;">Morphle is a biomedical robotics company that builds automated microscopes.&nbsp;&nbsp;<br><br>My work was centered around computer vision for pathology. I built two sets of models. The first set enables the robot to optimally capture critical areas of a slide. This is achieved by rapidly taking high FoV images at low resolution and detecting important areas using deep learning models. This is followed by optimal path calculation using algorithms like DFS and rescanning these important areas at high resolution. The second set of models works on top of high resolution images to detect cells and other inclusions. Some examples include detection of malarial parasites, leukemia and brain metastasis.</p>
+                            <p class="card-text" style="color: #fff;">Morphle is a biomedical robotics company that builds automated microscopes.&nbsp;&nbsp;<br><br>My work was centered around computer vision for pathology. I built two sets of AI models that integrate with the microscope. The first set enables the robot to optimally capture critical areas of a slide. This is achieved by rapidly taking high FoV images at low resolution and detecting important areas using deep learning models. This is followed by optimal path calculation using algorithms like DFS and rescanning these important areas at high resolution. The second set of models works on top of high resolution images to detect cells and other inclusions. Some examples include detection of malarial parasites, blast cells (leukemia) and brain tumours.</p>
                         </div>
                     </div>
                 </div>
@@ -544,7 +542,7 @@
             <h2 class="text-uppercase text-center text-white">Resume</h2>
             <p class="text-center" style="margin-top: 1em;">Don't want to go through the whole website? See just the important stuff. Downloadable as a pdf</p>
             <hr class="star-light mb-5">
-            <div class="text-center mt-4 embed-reponsive embed-responsive-16by9"><iframe src="https://docs.google.com/gview?url=https://raw.githubusercontent.com/Atom-101/Resume/master/AtmadeepBanerjee.pdf&embedded=true" style="width:100%; height:750px;" frameborder="0"></iframe></div>
+            <div class="text-center mt-4 embed-reponsive embed-responsive-16by9"><iframe src="https://docs.google.com/gview?url=https://raw.githubusercontent.com/Atom-101/Resume/master/AtmadeepBanerjee.pdf&embedded=true" style="width:100%; height:750px;" allow="autoplay" frameborder="0"></iframe></div>
         </div>
     </section><!-- End: resume -->
     <section id="contact" style="background: #969f9a;">
@@ -726,11 +724,8 @@
     </div><!-- End: #prolog -->
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/aos.min.js"></script>
-    <script src="assets/js/smart-forms.min.js"></script>
-    <script src="assets/js/bs-init.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-    <script src="assets/js/freelancer.js"></script>
+    <script src="assets/js/script.min.js"></script>
 </body>
 
 </html>
